Added refresh functionality

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>
 
             <p id='moves'> <span id='moves-count'>0</span> moves</p>
-            <i id='refresh' class="fa fa-repeat"></i>
+            <i id='restart' class="fa fa-repeat"></i>
         </section>
 
         <!-- section for the deck and the cards -->
