--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 
 <body>
 
+    <div id="modal">
+        <div id="modal-content">
+            <p id="modal-content-message">Are you sure you want to restart the game???</p>
+            <div id="modal-content-btn-container">
+                <span id='no-btn' class='modal-content-btn'>No</span>
+                <span id='yes-btn' class='modal-content-btn'>Yes</span>
+            </div>
+        </div>
+    </div>
+
     <header>
         <h1>Memory Game</h1>
     </header>
