Added handler for modal

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div id="modal">
         <div id="modal-content">
-            <p id="modal-content-message">Are you sure you want to restart the game???</p>
+            <p id="modal-content-message"></p>
             <div id="modal-content-btn-container">
                 <span id='no-btn' class='modal-content-btn'>No</span>
                 <span id='yes-btn' class='modal-content-btn'>Yes</span>
