--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <main>
         <!-- section for the stars, move count and restarting the game -->
         <section id='controls'>
+            <p id="timer-container"><span id="timer">0</span> sec</p>
             <ul id='rating'>
             </ul>
 
